--- a/client/src/components/connections/connections.scss
+++ b/client/src/components/connections/connections.scss
@@ -1,9 +1,8 @@
 @use '../../variables';
 
 .connections-container {
-  @include variables.whole-page;
   @include variables.centered-column;
-  height: calc(100vh - 64px);
+  @include variables.whole-page;
   @media (max-width: 440px) {
 	justify-content: flex-start;
 	background-color: rgba(255, 255, 255, 0.25);
@@ -31,7 +30,7 @@
 	  margin-top: 0;
 	}
 	@media (max-width: 440px) {
-	  margin-top: 1.5rem;
+	  margin-top: 1rem;
 	}
   }
 
@@ -41,7 +40,7 @@
 	height: 100%;
 	@media (max-width: 768px) {
 	  width: 80%;
-	  flex-direction: column-reverse;
+	  //flex-direction: column-reverse;
 	}
 	@media (max-width: 440px) {
 	  width: 100%;
@@ -58,6 +57,7 @@
 	  width: 100%;
 	  height: 3rem;
 	  @media (max-width: 440px) {
+		padding-top: 0.5rem;
 	  }
 
 	  button {
@@ -109,6 +109,7 @@
 
 	  @media (max-width: 768px) {
 		margin-top: 1rem;
+		margin-bottom: 0;
 		max-height: 70vh;
 	  }
 
