--- a/client/src/components/dashboard/dashboard-settings/change-password.scss
+++ b/client/src/components/dashboard/dashboard-settings/change-password.scss
@@ -9,8 +9,19 @@
   color: white;
   justify-content: space-between;
 
+  @media (max-width: 768px) {
+	margin-top: 0;
+  }
+
   .change-password-form {
 	width: 90%;
+
+	@media (max-width: 768px) {
+	  height: 100%;
+	  justify-content: center;
+	  gap: 1.5rem;
+	  padding-top: 0;
+	}
   }
 
   .form-title {
