--- a/client/src/components/homepage/homepage.scss
+++ b/client/src/components/homepage/homepage.scss
@@ -48,6 +48,7 @@
 	  height: 90%;
 	  align-self: center;
 	  justify-content: center;
+	  align-items: center;
 	}
 
 	.hero-text {
@@ -70,7 +71,8 @@
 	  }
 	  @media (max-width: 440px) {
 		//text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-		font-size: 1.5rem;
+		width: calc(100% - 52px);
+		font-size: 1.1rem;
 	  }
 	}
 
