--- a/client/src/variables.scss
+++ b/client/src/variables.scss
@@ -46,7 +46,10 @@ $default-button-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 @mixin whole-page {
   width: 100%;
   //height: calc(100vh - 80px);
-  height: calc(100dvh - 80px);
+  height: calc(100vh - 80px);
+  @media (max-width: 768px) {
+    height: calc(100dvh - 64px);
+  }
 }
 
 @mixin glass-container {
